--- a/base/templates/base/add.html
+++ b/base/templates/base/add.html
@@ -32,28 +32,28 @@
     <div class="row">
         <div class="col-lg-12">
             <div class="card card-body border-dark text-primary mt-5">
-                <span class="text-center">{% block card-title %} FILL OUT THE FORM BELOW {% endblock card-title %}</span>
+                <span class="text-center txt-sm">{% block card-title %} FILL OUT THE FORM BELOW {% endblock card-title %}</span>
             </div>
             <form {% block Action %} action="/add_patient/" {% endblock Action %} method="POST" autocomplete="off" enctype="multipart/form-data" class="card p-3 border-dark mt-3">
                 {% csrf_token %}
                 <div class="input-group input-group-sm mb-3">
-                    <span class="input-group-text side-label">Name</span>
+                    <span class="input-group-text side-label"><span class="txt-sm">Name</span></span>
                     <input type="text" class="form-control" name="name" id="name" maxlength="40" placeholder="First and Last Name" {% block Value-name %} {% endblock Value-name %}/>
                 </div>
                 <div class="input-group input-group-sm mb-3">
-                    <span class="input-group-text side-label">Phone</span>
+                    <span class="input-group-text side-label"><span class="txt-sm">Phone</span></span>
                     <input type="phone" class="form-control" name="phone" id="phone" placeholder="Patient phone" {% block Value-phone %} {% endblock Value-phone %}/>
                 </div>
                 <div class="input-group input-group-sm mb-3">
-                    <span class="input-group-text side-label">Email</span>
+                    <span class="input-group-text side-label"><span class="txt-sm">Email</span></span>
                     <input type="email" class="form-control" name="email" id="email" placeholder="Patient email" {% block Value-email %} {% endblock Value-email %}/>
                 </div>
                 <div class="input-group input-group-sm mb-3">
-                    <span class="input-group-text side-label">Age</span>
+                    <span class="input-group-text side-label"><span class="txt-sm">Age</span></span>
                     <input type="number" class="form-control" name="age" id="age" placeholder="Patient age" {% block Value-age %} {% endblock Value-age %}/>
                 </div>
                 <div class="input-group input-group-sm mb-3">
-                    <label class="input-group-text side-label">Gender</label>
+                    <label class="input-group-text side-label"><span class="txt-sm">Gender</span></label>
                     <select class="form-select" name="gender" id="gender">
                         {% block option %}
                         <option value="" hidden>Select the gender</option>
@@ -64,10 +64,10 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <textarea class="form-control" name="note" rows="7" placeholder="Description is optional...">{% block note %}{% endblock note %}</textarea>
+                    <textarea class="form-control txt-sm" name="note" rows="7" placeholder="Description is optional...">{% block note %}{% endblock note %}</textarea>
                 </div>
                 <div class="d-grid gap-2 mt-2">
-                    <button type="submit" class="btn btn-primary btn-sm" id="btn-add">
+                    <button type="submit" class="btn btn-primary btn-sm txt-sm" id="btn-add">
                         {% block Btn-add %}
                         <i class="fas fa-plus"></i>&nbsp;&nbsp;Add
                         {% endblock Btn-add %}
@@ -76,7 +76,7 @@
                     <!-- Reset button {in edit.html} denied here -->
                     {% block Btn-reset %}{% endblock Btn-reset %}
 
-                    <a href="{% url 'backend' %}" class="btn btn-dark btn-sm">
+                    <a href="{% url 'backend' %}" class="btn btn-dark btn-sm txt-sm">
                         <i class="fas fa-chevron-left"></i>&nbsp;&nbsp;Back
                     </a>
                 </div>
