--- a/templates/main.html
+++ b/templates/main.html
@@ -6,14 +6,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Favicon -->
     <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
+    <!-- Logo -->
     <link rel="shortcut icon" href="{% static 'images/logo.ico' %}">
+    <!-- Statc CSS -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" crossorigin="anonymous" />
+    
     <title>{% block title %} Medic Care {% endblock title %}</title>
 </head>
 
@@ -22,7 +28,7 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="col-sm">
-                    <a class="navbar-brand flex-grow-1" style="text-align: center; color: #fff; margin-left: 25px;">
+                    <a class="navbar-brand flex-grow-1" id="nav-content">
                         {% block nav-content %}
                         <i class="fas fa-briefcase-medical"></i>&nbsp;&nbsp;Medic Care
                         {% endblock nav-content %}
@@ -49,7 +55,7 @@
     <!-- Footer -->
     <footer class="bg-dark text-center text-lg-start text-light" id="footer">
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-            Copyright &copy; {% now "Y" %} <span>All right reserved</span> ! Made with
+            Copyright &copy; {% now "Y" %} <span id="all-rights">All right reserved</span> ! Made with
             <i class="text-danger fas fa-heartbeat blink_me" style="font-size: 15px;"></i> by
             <a href="https://github.com/preciousimo" target="_blank" {% block footer %}
                 style="color: #0dcaf0; text-decoration: none;" {% endblock footer %}>Prochi</a>
@@ -68,13 +74,13 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body text-center">
+                <div class="modal-body text-center txt-sm">
                     <span class="text-danger"><i class="fas fa-sign-out-alt fa-3x mt-4"></i></span>
                     <div class="mt-4 mb-4 text-danger">Are you sure you want to exit the system ?</div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Cancel</button>
-                    <a href="{% url 'logout' %}" type="button" class="btn btn-outline-danger btn-sm">Logout</a>
+                    <button type="button" class="btn btn-secondary btn-sm txt-sm" data-dismiss="modal">Cancel</button>
+                    <a href="{% url 'logout' %}" type="button" class="btn btn-outline-danger btn-sm txt-sm">Logout</a>
                 </div>
             </div>
         </div>
