--- a/base/templates/base/edit.html
+++ b/base/templates/base/edit.html
@@ -19,7 +19,7 @@ Registered at: <span class="text-dark">{{ patient.created_at | date:'d/m/Y (H:i)
 
 <!-- Reset button -->
 {% block Btn-reset %}
-<button type="reset" class="btn btn-secondary btn-sm"><i class="fas fa-sync-alt">&nbsp;&nbsp;Reset</i></button>
+<button type="reset" class="btn btn-secondary btn-sm txt-sm"><i class="fas fa-sync-alt">&nbsp;&nbsp;Reset</i></button>
 {% endblock Btn-reset %}
 
 <!-- Add button extended here -->
