--- a/base/templates/base/add.html
+++ b/base/templates/base/add.html
@@ -19,8 +19,8 @@
 
 <!-- Button in navbar -->
 {% block btn-nav %}
-<a class="btn btn-outline-danger btn-sm border-light text-light" id="btn-nav" data-toggle="modal"
-    data-target="#logoutModal">Logout</a>
+<a class="btn btn-outline-danger btn-sm border-light text-light" id="btn-nav" data-bs-toggle="modal"
+    data-bs-target="#logoutModal">Logout</a>
 {% endblock btn-nav %}
 
 <!-- Footer {color} -->
