--- a/static/css/style.css
+++ b/static/css/style.css
@@ -153,7 +153,7 @@ html,body{
     }
     /* Enable scrolling page on responsive */
     body {
-        overflow: visible;
+        overflow-y: visible;
     }
     /* Buttons in navbar */
     #btn-nav {
@@ -166,7 +166,7 @@ html,body{
 }
 
 /* RESPONSIVE RESOLUTION FOR TABLET (500px) */
-@media(max-width: 1024px) {
+@media(max-width: 500px) {
     /* Hide this <span> in this mode */
     #all-rights {
         display: none;
@@ -203,19 +203,32 @@ html,body{
     .icon-width {
         font-size: 12px;
     }
+    /* Title in login card */
+    #title-login {
+        font-size: 12px;
+    }
     /* Time hidden in this mode */
     #clock {
         display: none;
+    }
+    /* Welcome small font */
+    .welcome {
+        font-size: 12px;
+    }
+    /* Add patient button (backend.html)  */
+    #add-patient {
+        font-size: 12px;
     }
     /* Action button (delete & edit) */
     .btn-action {
         width: 35px;
         font-size: 12px;
-
     }
     /* Small pagination */
-    #first, #last {
-        font-size: 12px;
+    #pagination, #first, #last {
+        font-size: 12px; 
+    }
+    #first, #last { 
         width: 50px;
     } 
     /* Inputs in add.html & edit.html */
