--- a/templates/main.html
+++ b/templates/main.html
@@ -79,7 +79,7 @@
                     <div class="mt-4 mb-4 text-danger">Are you sure you want to exit the system ?</div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary btn-sm txt-sm" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-secondary btn-sm txt-sm" data-bs-dismiss="modal">Cancel</button>
                     <a href="{% url 'logout' %}" type="button" class="btn btn-outline-danger btn-sm txt-sm">Logout</a>
                 </div>
             </div>
