--- a/base/templates/base/add.html
+++ b/base/templates/base/add.html
@@ -87,4 +87,16 @@
         </div>
     </div>
 </div>
+
+<!-- Message from backend -->
+{% for message in messages %}
+    {% if message.tags == 'error' %}
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script>
+        var m = "{{ message }}";
+        swal("Denied !", m, "error")
+    </script>
+    {% endif %}
+{% endfor %}
+
 {% endblock content %}
