--- a/base/templates/registration/login.html
+++ b/base/templates/registration/login.html
@@ -18,37 +18,40 @@
 
 <!-- Page Content -->
 {% block content %}
-<div class="container mt-5">
-    <div class="card p-3 border-dark">
-        <span class="btn btn-outline-dark mt-3" id="title-login"><i class="fas fa-lock"></i>&nbsp;&nbsp;RESTRICTED ACCESS</span>
-        <form method="POST" autocomplete="off" novalidate >
+<style>
+    body {
+        background: url("/static/images/login-bg.jpg");
+        background-position: center 0px;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+    }
+</style>
+<div class="container mt-5" id="card-login">
+    <div class="card p-3 login-border">
+        <span class="btn btn-outline-dark mt-3" id="title-login" style="cursor: default;"><i class="fas fa-lock"></i>&nbsp;&nbsp;RESTRICTED
+            ACCESS</span>
+        <form method="POST" autocomplete="off" novalidate>
             {% csrf_token %}
             <div class="input-group mb-3 mt-5">
-                <span class="btn input-group-text border-secondary bg-light icon-width"><i class="fas fa-user-alt"></i></span>
+                <span class="btn input-group-text border-secondary bg-light icon-width"><i
+                        class="fas fa-user-alt"></i></span>
                 <input type="text" class="form-control txt-sm" name="username" placeholder="Username" />
             </div>
             <div class="input-group mb-3">
-                <span class="btn input-group-text border-secondary bg-light icon-width"><i class="fas fa-lock"></i></span>
+                <span class="btn input-group-text border-secondary bg-light icon-width"><i
+                        class="fas fa-lock"></i></span>
                 <input type="password" class="form-control txt-sm" name="password" placeholder="Password" />
             </div>
-            <a></a>
-            <input class="btn btn-primary btn-sm mt-4 mb-3" type="submit" value="Enter" id="btn-enter" />
+            <div class="d-grid gap-2">
+                <input class="btn btn-primary btn-sm mt-4 mb-3" type="submit" value="Enter" id="btn-enter" />
+            </div>
         </form>
+        <!-- Heart Pulse -->
+        <center class="mt-5 mb-5">
+            <i class="text-primary fas fa-heartbeat fa-7x blink_me"></i>
+        </center>
     </div>
-
-    <!-- Message from backend -->
-    {% if form.errors %}
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert"></script>
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script>
-        swal("Denied!","Enter your data correctly.", "error")
-    </script>
-    {% endif %}
-
-    <!-- Heart Pulse -->
-    <center id="heart">
-        <i class="text-primary fas fa-heartbeat fa-10x blink_me"></i>
-    </center>
 
 </div> <!-- END // Container -->
 {% endblock content %}
