--- a/base/templates/base/edit.html
+++ b/base/templates/base/edit.html
@@ -12,15 +12,15 @@
 Registered at: <span class="text-dark">{{ patient.created_at | date:'d/m/Y (H:i)' }}</span>
 {% endblock card-title %}
 
-<!-- Add button extended here -->
-{% block Btn-add %}
-<i class="fas fa-add"></i>&nbsp;&nbsp;Save
-{% endblock Btn-add %}
+<!-- Add button DESKTOP & TABLET -->
+{% block Btn-content1 %}
+<i class="fas fa-server"></i>&nbsp;&nbsp;Save Patient
+{% endblock Btn-content1 %}
 
-<!-- Reset button -->
-{% block Btn-reset %}
-<button type="reset" class="btn btn-secondary btn-sm txt-sm"><i class="fas fa-sync-alt">&nbsp;&nbsp;Reset</i></button>
-{% endblock Btn-reset %}
+<!-- Add button SMARTPHONE -->
+{% block Btn-content2 %}
+<i class="fas fa-add"></i>&nbsp;&nbsp;Save
+{% endblock Btn-content2 %}
 
 <!-- Add button extended here -->
 {% block Action %} action="/edit_patient/" {% endblock Action %}
