--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,241 +1,276 @@
 /* General Configuration */
-html,body{
-    height:100%;
-    margin: 0;
-    max-width: 100%;
-    overflow: hidden;
+html,
+body {
+  height: 100%;
+  margin: 0;
+  max-width: 100%;
+  overflow: hidden;
 }
 
-/* NAVBAR */ 
+/* NAVBAR */
 /* Button in navbar */
 #btn-nav {
-    width: 90px;
-    float: right;
-    margin-left: 25px;
+  width: 90px;
+  float: right;
+  margin-left: 25px;
 }
 
 /* Footer */
 .wrapper {
-    min-height: 100%;
-    margin-bottom: -50px;
+  min-height: 100%;
+  margin-bottom: -50px;
 }
-#footer, 
-.push{
-    height: 50px;
-    font-size: 13px;
+#footer,
+.push {
+  height: 50px;
+  font-size: 13px;
 }
 
 /* BASE */
 /* FontAwesome Icon & Title  */
 #nav-content {
-    text-align: center; 
-    color: #fff; 
-    margin-left: 25px;
+  text-align: center;
+  color: #fff;
+  margin-left: 25px;
 }
 
 /* LOGIN */
-/* Enter button */
-#btn-enter {
-    width: 90px;
-}
-/* Heart Pulse */
-#heart{
-    position: absolute;
-    top: 70%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
-    font-size: 20px;
-}
 /* Label of the <inputs> */
-.icon-width{
-    width: 45px;
+.icon-width {
+  width: 45px;
+}
+#card-login {
+  width: 450px;
+}
+.login-border {
+  border-top: 0.4rem solid #007bff;
+  border-radius: 10px;
+}
+#btn-enter {
+  border-radius: 15px;
+  font-size: 16px;
 }
 
 /* BACKEND */
 /* Label in (add.html & edit.html) */
-.side-label{
-    width: 75px;
+.side-label {
+  width: 50px;
 }
 /* Message if no data found in search box */
-#no-data{
-    position: absolute;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
-    font-size: 22px;
+#no-data {
+  position: absolute;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  font-size: 22px;
 }
 /* Pagination */
-#first, #last {
-    width: 60px;
+#first,
+#last {
+  width: 60px;
 }
+#Btn-add-smartphone {
+  display: none;
+}
+#btn-smartphone {
+  display: none;
+}
+.btn-add {
+  width: 150px;
+}
+
 /* Custom Sweetalert {blue theme} */
 /* All texts 100% centered */
 .swal-text {
-    text-align: center;
+  text-align: center;
 }
 
 /* Icon settings */
 .swal-icon--success:before,
 .swal-icon--success:after,
 .swal-icon--success__hide-corners {
-    background: none !important;
+  background: none !important;
 }
 .swal-icon--success {
-    /* Ring color */
-    border-color: #007bff;
+  /* Ring color */
+  border-color: #007bff;
 }
 .swal-icon--success__line {
-    /* Color animation */
-    background-color: #007bff;
+  /* Color animation */
+  background-color: #007bff;
 }
 /* Button settings */
 .swal-button {
-    padding: 7px 19px;
-    border-radius: 5px;
-    background-color: #007bff;
-    font-size: 12px;
-    border: 1px solid #007bff;
+  padding: 7px 19px;
+  border-radius: 5px;
+  background-color: #007bff;
+  font-size: 12px;
+  border: 1px solid #007bff;
 }
 .swal-button:focus {
-    /* Remove the silver border of the button */
-    box-shadow: none;
+  /* Remove the silver border of the button */
+  box-shadow: none;
 }
 .swal-button:not([diabled]):hover {
-    background: transparent;
-    color: #111;
-    border: 1px solid #007bff;
+  background: transparent;
+  color: #111;
+  border: 1px solid #007bff;
 }
 
 /* RESPONSIVE RESOLUTION FOR TABLET (1024px) */
-@media(max-width: 1024px) {
-    /* TABLE */
-    .table thead {
-        display: none;
-    }
-    .table, .table tbody, .table tr, table td {
-        display: block;
-        width: 100%;
-    }
-    .table tr {
-        margin-bottom: 15px;
-        border: 1px solid #111;
-        border-radius: 5px;
-    }
-    .table td {
-        text-align: right;
-        padding-left: 35%;
-        position: relative;
-        border: 1px solid transparent;
-    }
-    .table td::before {
-        content: attr(data-label);
-        position: absolute;
-        left: 0;
-        width: 50%;
-        padding-left: 15px;
-        font-weight: bold;
-        text-align: left;
-    }
-    .table > thead > tr:first-child {
-        display: none;
-        margin-top: 5px;
-    }
-    /* Border in TD */
-    #reponsive-border {
-        border: 1px solid #a9a9a9;
-    }
-    /* background color in TD */
-    #top-table {
-        background-color: #cfe2ff;
-        color: #111;
-        font-weight: bold;
-    }
-    /* Enable scrolling page on responsive */
-    body {
-        overflow-y: visible;
-    }
-    /* Buttons in navbar */
-    #btn-nav {
-        width: 75px;
-    }
-    /* Footer */
-    #footer {
-        font-size: 12px;
-    }
+@media (max-width: 1024px) {
+  /* TABLE */
+  .table thead {
+    display: none;
+  }
+  .table,
+  .table tbody,
+  .table tr,
+  table td {
+    display: block;
+    width: 100%;
+  }
+  .table tr {
+    margin-bottom: 15px;
+    border: 1px solid #111;
+    border-radius: 5px;
+  }
+  .table td {
+    text-align: right;
+    padding-left: 35%;
+    position: relative;
+    border: 1px solid transparent;
+  }
+  .table td::before {
+    content: attr(data-label);
+    position: absolute;
+    left: 0;
+    width: 50%;
+    padding-left: 15px;
+    font-weight: bold;
+    text-align: left;
+  }
+  .table > thead > tr:first-child {
+    display: none;
+    margin-top: 5px;
+  }
+  /* Border in TD */
+  #reponsive-border {
+    border: 1px solid #a9a9a9;
+  }
+  /* background color in TD */
+  #top-table {
+    background-color: #cfe2ff;
+    color: #111;
+    font-weight: bold;
+  }
+  /* Enable scrolling page on responsive */
+  body {
+    overflow-y: visible;
+  }
+  /* Buttons in navbar */
+  #btn-nav {
+    width: 75px;
+  }
+  /* Footer */
+  #footer {
+    font-size: 12px;
+  }
 }
 
 /* RESPONSIVE RESOLUTION FOR TABLET (500px) */
-@media(max-width: 500px) {
-    /* Hide this <span> in this mode */
-    #all-rights {
-        display: none;
-    }
-    /* Footer */
-    #footer {
-        font-size: 10px;
-    }
-    /* Button in navbar */
-    #btn-nav {
-        width: 65px;
-        font-size: 12px;
-        margin-right: 15px;
-    }
-    /* Content in navbar (icon & title) */
-    #nav-content {
-        font-size: 15px;
-        margin-left: 15px;
-    }
-    /* Heart pulse */
-    #heart {
-        font-size: 12px;
-    }
-    /* Enter button in login.html */
-    #btn-enter {
-        width: 100%;
-        border-radius: 30px;
-    }
-    /* Global text small */
-    .txt-sm {
-        font-size: 12px;
-    }
-    /* Label in username & password */
-    .icon-width {
-        font-size: 12px;
-    }
-    /* Title in login card */
-    #title-login {
-        font-size: 12px;
-    }
-    /* Time hidden in this mode */
-    #clock {
-        display: none;
-    }
-    /* Welcome small font */
-    .welcome {
-        font-size: 12px;
-    }
-    /* Add patient button (backend.html)  */
-    #add-patient {
-        font-size: 12px;
-    }
-    /* Action button (delete & edit) */
-    .btn-action {
-        width: 35px;
-        font-size: 12px;
-    }
-    /* Small pagination */
-    #pagination, #first, #last {
-        font-size: 12px; 
-    }
-    #first, #last { 
-        width: 50px;
-    } 
-    /* Inputs in add.html & edit.html */
-    #name, #phone, #email, #age, #gender {
-        font-size: 12px;
-    } 
-    .modal-title {
-        font-size: 14px;
-    }
+@media (max-width: 500px) {
+  /* Hide this <span> in this mode */
+  #all-rights {
+    display: none;
+  }
+  /* Footer */
+  #footer {
+    font-size: 10px;
+  }
+  /* Button in navbar */
+  #btn-nav {
+    width: 65px;
+    font-size: 12px;
+    margin-right: 15px;
+  }
+  /* Content in navbar (icon & title) */
+  #nav-content {
+    font-size: 15px;
+    margin-left: 15px;
+  }
+  /* Global text small */
+  .txt-sm {
+    font-size: 12px;
+  }
+  /* Label in username & password */
+  .icon-width {
+    font-size: 12px;
+  }
+  /* Title in login card */
+  #title-login {
+    font-size: 12px;
+  }
+  /* Time hidden in this mode */
+  #clock {
+    display: none;
+  }
+  /* Welcome small font */
+  .welcome {
+    font-size: 12px;
+  }
+  /* Add patient button (backend.html)  */
+  #add-patient {
+    font-size: 12px;
+  }
+  /* Action button (delete & edit) */
+  .btn-action {
+    width: 35px;
+    font-size: 12px;
+  }
+  /* Small pagination */
+  #pagination,
+  #first,
+  #last {
+    font-size: 12px;
+  }
+  #first,
+  #last {
+    width: 50px;
+  }
+  /* Inputs in add.html & edit.html */
+  #name,
+  #phone,
+  #email,
+  #age,
+  #gender {
+    font-size: 12px;
+  }
+  .modal-title {
+    font-size: 14px;
+  }
+  #card-login {
+    width: 95px;
+  }
+  #btn-enter {
+    font-size: 12px;
+  }
+  #Btn-add-smartphone {
+    display: inline;
+    width: 40px;
+    font-size: 12px;
+  }
+  #Btn-add-desktop {
+    display: none;
+  }
+  #btnsmartphone {
+    display: inline;
+  }
+  #btn-desktop {
+    display: none;
+  }
+  /* Label in (add.html & edit.html) */
+  .side-label {
+    width: 40px;
+  }
 }
