--- a/templates/main.html
+++ b/templates/main.html
@@ -86,6 +86,15 @@
         </div>
     </div>
 
+    <!-- Message from backend (login) -->
+    {% if form.errors %}
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script>
+        swal("Denied!", "Enter your data correctly.", "error")
+    </script>
+    {% endif %}
+
     <!-- Bootstrap & JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
