Backend support for non-administrative accounts

--- a/base/templates/base/backend.html
+++ b/base/templates/base/backend.html
@@ -19,10 +19,9 @@
 
 <!-- Button in navbar -->
 {% block btn-nav %}
-<div class="text-light" id="sidebar" ata-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
+<div class="text-light" id="sidebar" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
     <i class="fas fa-bars"></i>
 </div>
-<a  class="btn btn-outline-danger btn-sm border-light text-light" id="btn-nav" >Logout</a>
 {% endblock btn-nav %}
 
 <!-- Sidebar -->
